# IterativeAI

./: .gitignore  pyproject.toml
.claude/: settings.local.json
poc/: README.md  blast_radius.md  run.py
poc/.claude/skills/select-pipeline-template/: SKILL.md
poc/control/: run_log.jsonl
poc/lib/: run_logger.py
poc/manifest/: hash_manifest.json
poc/metadata/bronze/: order_items.json  orders_raw.json
poc/metadata/gold/: fact_orders.json
poc/metadata/silver/: order_item_totals.json  orders.json
poc/selections/: gold.fact_orders.selection.json  silver.order_item_totals.selection.json  silver.orders.selection.json
poc/templates/: aggregate.py.tmpl  cast_and_dedupe.py.tmpl  cast_dedupe_join.py.tmpl  registry.json
